--- a/app/wp-content/themes/wphetic/src/style/main.scss
+++ b/app/wp-content/themes/wphetic/src/style/main.scss
@@ -4,6 +4,7 @@
 // COMPONENTS
 @import "./components/form";
 @import "./components/menu";
+@import "components/footer";
 
 // TEMPLATES
 @import "./templates/post";
