--- a/app/wp-content/themes/wphetic/src/style/base/_common.scss
+++ b/app/wp-content/themes/wphetic/src/style/base/_common.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap%27');
 
 $font-base: 'Poppins', sans-serif;
 
@@ -8,6 +9,40 @@ body, html {
 }
 *:focus,
 *:active {
-  outline: none !important;
-  -webkit-tap-highlight-color: transparent;
+    outline: none !important;
+    -webkit-tap-highlight-color: transparent;
+}
+.arrow {
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    background: transparent;
+    text-indent: -9999px;
+    border-top: 2px solid #3c4250;
+    border-left: 2px solid  #3c4250;
+    transition: all 250ms ease-in-out;
+    text-decoration: none;
+    color: transparent;
+}
+.arrow:hover {
+    border-color: #6666ff;
+    border-width: 5px;
+}
+.arrow:before {
+    display: block;
+    height: 200%;
+    width: 200%;
+    margin-left: -50%;
+    margin-top: -50%;
+    content: "";
+    transform: rotate(45deg);
+}
+
+.arrow.down {
+    transform: rotate(-135deg);
+    right: 175px;
+}
+
+li {
+    list-style: none;
 }
